@@ -2,6 +2,8 @@ Version 0.8.0~dev
 
 	* Added 'limit_group' parameter to allow multiple instances of spvd to
 	work on identical DB but different groups.
+	* Limit number of results to commit at the same time (default 50).
+	Configration value is 'limit_commit'.
 
 Version 0.7.0 Released on 2010/04/21
 
